--- a/regulations/static/regulations/css/scss/partials/_sidebar_right.scss
+++ b/regulations/static/regulations/css/scss/partials/_sidebar_right.scss
@@ -80,13 +80,13 @@ aside.right-sidebar {
     color: $primary_link_color;
     font-weight: bold;
     padding-right: $spacer-1;
+    margin-right: $spacer-1;
     border-right: 1px solid $black;
 }
 
 .related-rule-citation {
     color: $primary_link_color;
     font-weight: bold;
-    padding-left: $spacer-1;
 }
 
 .related-rule-title {
